# nu_plugin_vec

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  bumpVersion.yml  release.yml
example/: wedding.nu  wedding_tasks.csv
src/: lib.rs  main.rs
src/commands/: add.rs  cos.rs  dot.rs  magnitude.rs  mod.rs  normalize.rs  scale.rs  sin.rs  sqnorm.rs  sub.rs
src/utils/: assertions.rs  mod.rs  reducers.rs  testing.rs
tests/commands/: add.rs  cos.rs  dot.rs  magnitude.rs  mod.rs  normalize.rs  scale.rs  sin.rs  sqnorm.rs  sub.rs
workspace/: build.nu  setup.nu
