[package]
authors = ["Dennis Kottier <inquiries@photonbur.st>"]
description = "A Nushell plugin implementing vector operations"
edition = "2021"
homepage = "https://github.com/PhotonBursted/nu_plugin_vec"
license = "MIT"
name = "nu_plugin_vec"
readme = "README.md"
version = "1.1.1"

[dependencies]
nu-plugin = "0.100.0"
nu-protocol = "0.100.0"
itertools = "0.13.0"

[dev-dependencies]
nu-plugin-test-support = { version = "0.100.0" }